--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   },
   "homepage": "https://github.com/edus44/express-deliver#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "express-domain-middleware": "^0.1.0",
     "q": "^1.4.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "express": "^4.14.0",
+    "mocha": "^3.1.2",
+    "sinon": "^1.17.6"
   }
 }
