--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-deliver",
-  "version": "0.0.9",
+  "version": "1.0.0",
   "description": "API handlers for ExpressJS",
   "main": "index.js",
   "scripts": {
@@ -16,17 +16,17 @@
     "url": "https://github.com/edus44/express-deliver/issues"
   },
   "homepage": "https://github.com/edus44/express-deliver#readme",
-  "dependencies": {
-    "bluebird": "^3.4.6",
-    "co": "^4.6.0",
-    "express-domain-middleware": "^0.1.0"
-  },
   "devDependencies": {
     "chai": "^3.5.0",
-    "express": "^4.14.0",
-    "mocha": "^3.1.2",
-    "q": "^1.4.1",
-    "sinon": "^1.17.6",
-    "supertest": "^2.0.1"
+    "eslint": "^3.19.0",
+    "eslint-config-gigigo-standard": "^0.1.9",
+    "express": "^4.15.2",
+    "mocha": "^3.3.0",
+    "sinon": "^2.1.0",
+    "supertest": "^3.0.0"
+  },
+  "dependencies": {
+    "co": "^4.6.0",
+    "methods": "^1.1.2"
   }
 }
