--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "express-deliver-2",
-  "version": "1.0.0",
+  "name": "express-deliver",
+  "version": "1.0.0-alpha",
   "description": "API handlers for ExpressJS",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "cover": "nyc --reporter=html --report-dir=./test/coverage --temp-directory ./test/coverage/tmp npm run test",
-    "dev":"opn test/coverage/index.html --ext html && nodemon --exec npm run cover"
+    "cover": "nyc --reporter=html --reporter=text --reporter=lcov --report-dir=./test/coverage --temp-directory ./test/coverage/tmp npm run test",
+    "coveralls": "npm run cover && cat ./test/coverage/lcov.info | coveralls",
+    "dev": "opn test/coverage/index.html --ext html && nodemon --exec npm run cover"
   },
   "repository": {
     "type": "git",
@@ -20,13 +21,13 @@
   "homepage": "https://github.com/edus44/express-deliver#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.13.1",
     "eslint": "^3.19.0",
     "eslint-config-gigigo-standard": "^0.1.9",
     "express": "^4.15.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.3.0",
-    "npm-run-all": "^4.0.2",
-    "nyc": "^10.3.0",
+    "nyc": "^10.3.2",
     "opn-cli": "^3.1.0",
     "sinon": "^2.1.0",
     "supertest": "^3.0.0"
