--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "express-deliver",
-  "version": "1.0.0-alpha",
-  "description": "API handlers for ExpressJS",
+  "version": "1.0.0-beta",
+  "description": "API json responses done easy",
+  "keywords":["express","api","json","co","generators","promises","generator","promise","error handler","exception"],
   "main": "index.js",
   "scripts": {
     "test": "mocha",
