--- a/package.json
+++ b/package.json
@@ -2,7 +2,21 @@
   "name": "express-deliver",
   "version": "1.0.0-rc-3",
   "description": "API json responses done easy",
-  "keywords":["express","api","json","co","generators","promises","generator","promise","error handler","exception","async","await","async/await"],
+  "keywords": [
+    "express",
+    "api",
+    "json",
+    "co",
+    "generators",
+    "promises",
+    "generator",
+    "promise",
+    "error handler",
+    "exception",
+    "async",
+    "await",
+    "async/await"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "mocha",
@@ -34,6 +48,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "co": "^4.6.0",
     "methods": "^1.1.2"
   }
