--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-deliver",
-  "version": "1.0.0-rc-6",
+  "version": "1.0.0",
   "description": "API json responses done easy",
   "keywords": [
     "express",
